--- a/pages/contact.html
+++ b/pages/contact.html
@@ -8,10 +8,14 @@
     content="Contactanos y asesorate con los los mejores especialistas en decoración de interiores"
   />
     <title>MB Interiores - Pagina de Contacto</title>
-    <link rel="shortcut icon" href="../assets/images/logoBrown.JPG" type="image/x-icon"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="../stylesLogin.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="../css/main.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="shortcut icon" href="../assets/images/logoBrown.JPG" type="image/x-icon"/>
+
+
+    
 </head>
 <body>
       <header class="header">
