--- a/pages/contact.html
+++ b/pages/contact.html
@@ -124,7 +124,7 @@
         <li class="col-12 col-md-4">
           <ul class="d-flex justify-content-center justify-content-md-end">
             <li>
-              <a href="https://wa.me/+54911" target="_blank">
+              <a href="https://wa.me/+5491135925309" target="_blank">
                 <img
                   src="../assets/images/whatsapp.svg"
                   alt="Whatsapp"
