--- a/pages/contact.html
+++ b/pages/contact.html
@@ -68,7 +68,7 @@
     <hr class="mt-0"/>
     <main class="mainContact container-fluid pb-5 fst-italic fw-semibold">
         <h4 class=" text-center fw-semibold">Asesorate y convertí tu casa en la que siempre soñaste</h4>
-        <form class="rounded row g-3 bg-light border mt-auto container-md ms-auto me-auto">
+        <form action="https://formspree.io/f/mqkovjeq" method="post" class="rounded row g-3 bg-light border mt-auto container-md ms-auto me-auto">
             <div class="col-md-6">
               <label for="inputName" class="form-label">Nombre(s)</label>
               <input type="nombre" class="form-control" id="inputName">
@@ -109,7 +109,8 @@
                 <small id="ContactHelp" class="form-text text-muted">Uno de nuestros asesores se estará contactando a la brevedad</small>
             </div>
         </section>
-          </form>
+          </form> 
+
     </main>
     <hr class="mb-0">
     <footer>
