--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -15,7 +15,7 @@
           <link rel="shortcut icon" href="../assets/images/logoBrown.JPG" type="image/x-icon"/>
 </head>
 <body>
-<header class="header">
+<header class="headerPrivacy">
                     <nav class="navbar navbar-expand-md">
                       <div class="container">
                         <a class="navbar-brand" href="../index.html"
